# cribl-interview-python

./: .gitignore  README.md  pyproject.toml  question.md
.github/workflows/: testing.yaml
cribl_python_interview/: main.py
tests/: file_reading_test.py  integration_test.py  tree_test.py
