[tool.poetry]
name = "cribl-python-interview"
version = "0.1.0"
description = ""
authors = ["Justin Abrahms <justin@abrah.ms>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
uvicorn = "^0.27.0.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
